compiler/testData/diagnostics/tests/callableReference/kt47378.fir.kt
val a = (<!FUNCTION_CALL_EXPECTED!>arrayOf<!>)<<!CANNOT_INFER_PARAMETER_TYPE!>String<!>>::<!UNRESOLVED_REFERENCE!>firstElement<!>
